feat: add rotas swagger
