# src/modules/products/infra/http/routes/products.routes.ts
@@ -1,17 +1,13 @@
 import { Router } from 'express';
 import ProductsController from '../controllers/ProductsController';
 import { celebrate, Joi, Segments } from 'celebrate';
-import isAuthenticated from '@shared/infra/http/middlewares/isAuthenticated';
 
-const productRouter = Router();
-
+const productsRouter = Router();
 const productsController = new ProductsController();
 
-productRouter.use(isAuthenticated);
+productsRouter.get('/', productsController.index);
 
-productRouter.get('/', productsController.index);
-
-productRouter.get(
+productsRouter.get(
   '/:id',
   celebrate({
     [Segments.PARAMS]: {
@@ -21,7 +17,7 @@ productRouter.get(
   productsController.show,
 );
 
-productRouter.post(
+productsRouter.post(
   '/',
   celebrate({
     [Segments.BODY]: {
@@ -33,7 +29,7 @@ productRouter.post(
   productsController.create,
 );
 
-productRouter.put(
+productsRouter.put(
   '/:id',
   celebrate({
     [Segments.BODY]: {
@@ -48,14 +44,14 @@ productRouter.put(
   productsController.update,
 );
 
-productRouter.delete(
+productsRouter.delete(
   '/:id',
   celebrate({
     [Segments.PARAMS]: {
       id: Joi.string().uuid().required(),
     },
   }),
-  productsController.destroy,
+  productsController.delete,
 );
 
-export default productRouter;
+export default productsRouter;
